--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@nlpjs/basic": "^4.22.0",
     "@nlpjs/lang-pt": "^4.22.0",
+    "axios": "^0.21.1",
     "express": "^4.17.1",
+    "mongoose": "^5.12.13",
     "node-nlp": "^4.22.1",
     "venom-bot": "^3.0.17"
   },
