--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "anizapp",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "It's a bot that works like Mudae Bot for Whatsapp",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node src/server/express.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Harry",
@@ -14,6 +15,7 @@
     "@nlpjs/lang-pt": "^4.22.0",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.13",
     "node-schedule": "^2.0.0",
